--- a/Current lecture notes.html
+++ b/Current lecture notes.html
@@ -11,7 +11,7 @@
 
       <div id="Subjects"><h1 id="Subjects" class="header"><a href="#Subjects">Subjects</a></h1></div>
       <ul>
-        <li><a href="https://thezeroalpha.github.io/automata-complexity-notes">Automata & Complexity</a></li>
+        <li><a href="http://thezeroalpha.github.io/philosophy-notes">Philosophy</a></li>
         <!-- <li><a href="Intro to Cryptography.html">Intro to Cryptography</a></li> -->
       </ul>
 
